--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+opencv-python = ">=4.5.1.48"
 pandas = ">=1.2.3"
+tqdm = ">=2.2.3"
 
 [dev-packages]
-
-[requires]
-python_version = "3.9"
